# HiveAutoCheck

./: .dockerignore  Dockerfile  README.md  pyproject.toml  sources.list  windows.Dockerfile
.github/workflows/: build_artifacts.yml  docker-image.yml
autocheck/: __init__.py  __main__.py  assignment.py  autocheck.py  conftest.py  decorators.py  exercise.py  fixtures.py  hive.py  input.py  input_json.py  main.py  metadata.py  output.py  output_json.py  path_utils.py  randomize_utils.py  requirements.txt  settings.py
autocheck/BlackboxTests/: __init__.py  blackbox_test.py  blackbox_test_config.py
autocheck/compiler/: __init___.py  cmake_compiler.py  compiler.py  exceptions.py  make_compiler.py
autocheck/gitlab_client/: __init__.py  gitlab_client.py
autocheck/test_files/: __init__.py  conftest.py  test_file_submitted.py
examples/: comment.input.json  empty.input.json  file.input.json
